<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
   android:layout_gravity="center"
    android:gravity="center"

    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patternName"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/patternNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:layout_gravity="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">


        <Button
            android:id="@+id/saveMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/shape"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/shape"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>




</LinearLayout>